--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Login Page</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.js">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
