--- a/map.html
+++ b/map.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
 	<link rel="stylesheet" type="text/css" href="css/maincss.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
