--- a/map.html
+++ b/map.html
@@ -43,36 +43,74 @@
 		
 		<div class="form-group">
 		<label for="inputFrom">From</label>
-		<input type="text" id="inputFrom" placeholder="From" class="form-control" />
+		<!-- <input type="text" id="inputFrom" placeholder="From" class="form-control" /> -->
+		<select id="start" class="form-control">
+	      <option value="chicago, il">Chicago</option>
+	      <option value="st louis, mo">St Louis</option>
+	      <option value="joplin, mo">Joplin, MO</option>
+	      <option value="oklahoma city, ok">Oklahoma City</option>
+	      <option value="amarillo, tx">Amarillo</option>
+	      <option value="gallup, nm">Gallup, NM</option>
+	      <option value="flagstaff, az">Flagstaff, AZ</option>
+	      <option value="winona, az">Winona</option>
+	      <option value="kingman, az">Kingman</option>
+	      <option value="barstow, ca">Barstow</option>
+	      <option value="san bernardino, ca">San Bernardino</option>
+	      <option value="los angeles, ca">Los Angeles</option>
+	    </select>
 		</div>
 
 		<div class="form-group">
 		<label for="inputTo">To</label>
-		<input type="text" id="inputTo" placeholder="To" class="form-control" />
+		<!-- <input type="text" id="inputTo" placeholder="To" class="form-control" /> -->
+		<select id="end" class="form-control">
+	      <option value="chicago, il">Chicago</option>
+	      <option value="st louis, mo">St Louis</option>
+	      <option value="joplin, mo">Joplin, MO</option>
+	      <option value="oklahoma city, ok">Oklahoma City</option>
+	      <option value="amarillo, tx">Amarillo</option>
+	      <option value="gallup, nm">Gallup, NM</option>
+	      <option value="flagstaff, az">Flagstaff, AZ</option>
+	      <option value="winona, az">Winona</option>
+	      <option value="kingman, az">Kingman</option>
+	      <option value="barstow, ca">Barstow</option>
+	      <option value="san bernardino, ca">San Bernardino</option>
+	      <option value="los angeles, ca">Los Angeles</option>
+	    </select>
 		</div>
 
-		<a href="#" class="btn btn-primary btn-block">Search</a>
+		<a class="btn btn-primary btn-block" onclick="calcRoute();">Search</a>
 
 		
 	</div>
 
 	<!--/Form Content-->
-	
-	<!--Map Area-->
-	<div id="map-canvas">
-		
-	</div>
 
-	<!--/Map Area-->
+	<!--Map Area-->
+
+		<div id="map-canvas" >
+			
+		</div>
+
+		<!--/Map Area-->
+		
+	
+	
 
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
 	<script type="text/javascript">
 
+		var directionsDisplay;
+		var directionsService = new google.maps.DirectionsService();
+		// var map;
+
 		function initialize() {
 			// var mapCanvas = $('#map-canvas');
 			// alert(mapCanvas);
+			directionsDisplay = new google.maps.DirectionsRenderer();
+
 			var mapCanvas = document.getElementById('map-canvas');
 			var mapOptions = {
 				center : new google.maps.LatLng(44.5403, -78.5463),
@@ -80,9 +118,28 @@
 				mapTypeId : google.maps.MapTypeId.ROADMAP
 			}
 			var map = new google.maps.Map(mapCanvas, mapOptions);
+
+			directionsDisplay.setMap(map);
+		}
+
+		function calcRoute() {
+			var start = $('#start').val();
+			var end = $('#end').val();
+			var request = {
+				origin : start,
+				destination : end,
+				travelMode : google.maps.TravelMode.DRIVING
+			};
+
+			directionsService.route(request, function(response, status) {
+				if(status == google.maps.DirectionsStatus.OK) {
+					directionsDisplay.setDirections(response);
+				}	
+			});
 		}
 
 		google.maps.event.addDomListener(window, 'load', initialize);
+		// google.maps.event.addDomListener(window, 'resize', initialize);
 
 		
 	</script>
